syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto";
option java_outer_classname = "HelloWorldServiceProto";

service HelloWorldService {
    rpc sayHello (HelloRequest) returns (HelloResponse);
    rpc serverStream (HelloRequest) returns (stream HelloResponse);
    rpc bidiStream (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
}